--- a/Invest2.ipynb
+++ b/Invest2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Invest2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPu5/iwQ0bqg7HqhSdM1ZUK",
+      "authorship_tag": "ABX9TyMsizlwIqAPUmhpvDMHicnY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -753,13 +753,99 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def get_stock_mean_sd(stock_df, ticker):\n",
+        "  return stock_df[ticker].mean(), stock_df[ticker].std()\n",
+        "\n",
+        "def get_mult_stock_mean_sd(stock_df):\n",
+        "  for stock in stock_df:\n",
+        "    mean, sd=get_stock_mean_sd(stock_df, stock)\n",
+        "    cov = sd/mean\n",
+        "    print(\"Stock: {:4} Mean: {:7.2f} Standard Deviation: {:2.2f}\".format(stock, mean,sd))\n",
+        "    print(\"Coefficient of Variation: {}\\n\".format(cov))"
       ],
       "metadata": {
         "id": "In7qys5pxvbz"
       },
-      "execution_count": null,
+      "execution_count": 110,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Coefficient of Varation: how risky the stock is \n",
+        "\n",
+        "get_mult_stock_mean_sd(mult_df)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J6QrRobc92mR",
+        "outputId": "64b19bad-ed30-4556-d40c-ff0b6bc5740a"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Stock: AMZN Mean: 3322.03 Standard Deviation: 189.85\n",
+            "Coefficient of Variation: 0.05714827092609993\n",
+            "\n",
+            "Stock: COST Mean:  441.20 Standard Deviation: 69.86\n",
+            "Coefficient of Variation: 0.1583419474578971\n",
+            "\n",
+            "Stock: ADBE Mean:  564.11 Standard Deviation: 73.30\n",
+            "Coefficient of Variation: 0.1299434276604922\n",
+            "\n",
+            "Stock: QQQ  Mean:  357.81 Standard Deviation: 26.06\n",
+            "Coefficient of Variation: 0.07282898495239808\n",
+            "\n",
+            "Stock: TQQQ Mean:   63.39 Standard Deviation: 12.63\n",
+            "Coefficient of Variation: 0.1992988001976903\n",
+            "\n",
+            "Stock: NVDA Mean:  211.72 Standard Deviation: 56.83\n",
+            "Coefficient of Variation: 0.2684029644080053\n",
+            "\n",
+            "Stock: VUG  Mean:  289.16 Standard Deviation: 21.05\n",
+            "Coefficient of Variation: 0.07280049553964837\n",
+            "\n",
+            "Stock: VGT  Mean:  404.86 Standard Deviation: 31.61\n",
+            "Coefficient of Variation: 0.0780864719383253\n",
+            "\n",
+            "Stock: VOO  Mean:  398.44 Standard Deviation: 23.05\n",
+            "Coefficient of Variation: 0.05784152225884609\n",
+            "\n",
+            "Stock: SPY  Mean:  433.49 Standard Deviation: 25.00\n",
+            "Coefficient of Variation: 0.05767127262141389\n",
+            "\n",
+            "Stock: AMD  Mean:  105.91 Standard Deviation: 24.42\n",
+            "Coefficient of Variation: 0.2305932670704774\n",
+            "\n",
+            "Stock: MSFT Mean:  285.15 Standard Deviation: 33.20\n",
+            "Coefficient of Variation: 0.1164459353266561\n",
+            "\n",
+            "Stock: DIS  Mean:  171.34 Standard Deviation: 15.00\n",
+            "Coefficient of Variation: 0.08756163660193782\n",
+            "\n",
+            "Stock: WMT  Mean:  140.24 Standard Deviation: 5.23\n",
+            "Coefficient of Variation: 0.03732521907663944\n",
+            "\n",
+            "Stock: TGT  Mean:  227.18 Standard Deviation: 23.42\n",
+            "Coefficient of Variation: 0.10309400881929266\n",
+            "\n",
+            "Stock: HD   Mean:  336.94 Standard Deviation: 38.50\n",
+            "Coefficient of Variation: 0.11426945704834153\n",
+            "\n",
+            "Stock: TSLA Mean:  799.61 Standard Deviation: 175.25\n",
+            "Coefficient of Variation: 0.21917191230167948\n",
+            "\n",
+            "Stock: ARKK Mean:  109.40 Standard Deviation: 16.73\n",
+            "Coefficient of Variation: 0.1529648644086325\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
